generate/vidbid-frontend/templates/service.yaml
---
# Source: vidbid-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vidbid-frontend
  labels:
    chart: "vidbid-frontend-0.1.0-SNAPSHOT"
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: vidbid-frontend
